==> Johnbob7/STM-Tau-control-toolkit/TauCamFinal/Core/Src/fatfs_sd.c <==
#include "stm32l1xx_hal_conf.h"
#include "diskio.h"
#include "fatfs_sd.h"
#define SD_CS_GPIO_Port GPIOC
#define SD_CS_Pin GPIO_PIN_1
#define TRUE  1
#define FALSE 0
#define bool BYTE

static void SELECT(void)
{
  HAL_GPIO_WritePin(SD_CS_GPIO_Port, SD_CS_Pin, GPIO_PIN_RESET);
}

static void DESELECT(void)
{
  HAL_GPIO_WritePin(SD_CS_GPIO_Port, SD_CS_Pin, GPIO_PIN_SET);
}

static void SPI_TxByte(BYTE data)
{
  while (HAL_SPI_GetState(&hspi2) != HAL_SPI_STATE_READY);
  HAL_SPI_Transmit(&hspi2, &data, 1, SPI_TIMEOUT);
}

static uint8_t SPI_RxByte(void)
{
  uint8_t dummy, data;
  dummy = 0xFF;
  data = 0;

  while ((HAL_SPI_GetState(&hspi2) != HAL_SPI_STATE_READY));
  HAL_SPI_TransmitReceive(&hspi2, &dummy, &data, 1, SPI_TIMEOUT);

  return data;
}
